# quickbook-bot

./: README.md  app.py  forgetable_items.txt  manage.py  pyproject.toml  x.ipynb
app/main/: config.py
app/main/bot/: chat.py  chat_handler.py
app/main/tool_operations/service/: orch_tool.py  tool_execution.py  workflow_executor.py  workflow_helpers.py
app/main/tool_operations/utils/: api_call.py  context.py  llm.py  prompt_helper.py
app/main/tool_operations/utils/memory/: memory.json  memory.py
app/main/tool_operations/utils/prompt_versioning/agent1/: prompt_v1.py  prompt_v2.py  prompt_v3.py  prompt_vlatest.py
app/main/tool_operations/utils/prompt_versioning/agent2/: prompt_v1.py  prompt_v2.py  prompt_v3.py  prompt_v4.py
app/main/tool_operations/utils/prompt_versions/agent2/: prompt_v2.py  prompt_vlatest.py
app/main/tool_operations/utils/tools/: qbo_tools.json
app/main/tools/auth/: OAuth2Helper.py
app/main/tools/service/: categorization.py  company.py  customer.py  transaction.py
app/main/tools/utils/: api_call.py  context.py  llm.py
templates/: chat-stream.html  chat.html  index.html
