[project]
name = "quickbook-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-oauth>=0.12",
    "langchain>=0.3.20",
    "langchain-google-genai>=2.0.11",
    "langchain-openai>=0.3.7",
    "openpyxl>=3.1.5",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "werkzeug>=3.1.3",
]
